Added a start to projectiles.
However it doesn't do anything yet functionally.

--- a/Project Pinballish/Project source/sample.csproj
+++ b/Project Pinballish/Project source/sample.csproj
@@ -115,6 +115,7 @@
     </Compile>
     <Compile Include="Vec2.cs" />
     <Compile Include="Ship.cs" />
+    <Compile Include="Projectile.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Drawing" />
