I did Level stuff
Moved MyGame to Level and stuff

--- a/Project Pinballish/Project source/sample.csproj
+++ b/Project Pinballish/Project source/sample.csproj
@@ -121,6 +121,7 @@
     <Compile Include="QuitButton.cs" />
     <Compile Include="StartButton.cs" />
     <Compile Include="Titlescreen.cs" />
+    <Compile Include="Level.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Drawing" />
