Sounds & Changes to projectile collision
!

--- a/Project Pinballish/Project source/sample.csproj
+++ b/Project Pinballish/Project source/sample.csproj
@@ -124,8 +124,10 @@
     <Compile Include="Level.cs" />
     <Compile Include="Trail.cs" />
     <Compile Include="ControlButton.cs" />
+    <Compile Include="SoundManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Drawing" />
+    <Reference Include="System" />
   </ItemGroup>
 </Project>
