Control+Titlescreen Complete

--- a/Project Pinballish/Project source/sample.csproj
+++ b/Project Pinballish/Project source/sample.csproj
@@ -126,6 +126,7 @@
     <Compile Include="ControlButton.cs" />
     <Compile Include="SoundManager.cs" />
     <Compile Include="HUD.cs" />
+    <Compile Include="ControlScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Drawing" />
