--- a/Project Pinballish/Project source/sample.csproj
+++ b/Project Pinballish/Project source/sample.csproj
@@ -127,6 +127,7 @@
     <Compile Include="SoundManager.cs" />
     <Compile Include="HUD.cs" />
     <Compile Include="ControlScreen.cs" />
+    <Compile Include="Scoreboard.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Drawing" />
