An evening of productivity
- New levels loaded with kept score (buggy!)
- Powerups (no collision yet)
- Code cleanup

--- a/Project Pinballish/Project source/Space Out.csproj
+++ b/Project Pinballish/Project source/Space Out.csproj
@@ -129,6 +129,7 @@
     <Compile Include="ControlScreen.cs" />
     <Compile Include="Scoreboard.cs" />
     <Compile Include="Shield.cs" />
+    <Compile Include="PowerUp.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Drawing" />
