Titlescreen and Blevel and stuff... senpai

--- a/Project Pinballish/Project source/Space Out.csproj
+++ b/Project Pinballish/Project source/Space Out.csproj
@@ -130,6 +130,9 @@
     <Compile Include="Scoreboard.cs" />
     <Compile Include="Shield.cs" />
     <Compile Include="PowerUp.cs" />
+    <Compile Include="BLevel.cs" />
+    <Compile Include="HelpScreen.cs" />
+    <Compile Include="HelpButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Drawing" />
