We :heart:  Bram-senpai
:heart:

Oh yea... and... it's scaled :dancer:

--- a/Project Pinballish/Project source/Space Out.csproj
+++ b/Project Pinballish/Project source/Space Out.csproj
@@ -134,6 +134,7 @@
     <Compile Include="HelpScreen.cs" />
     <Compile Include="HelpButton.cs" />
     <Compile Include="Winner.cs" />
+    <Compile Include="Winscreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Drawing" />
